Changes - Heading , Address , Phone no. Alignments and more

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
 			<!--eof topline-->
 
-			<section class="page_toplogo ls s-py-15 text-center">
+			<section class="page_toplogo ls s-py-20 text-center">
 				<div class="container-fluid">
-					<div class="row align-items-center">
+					<div class="row align-items-xl-start">
 						<div class="col-lg-4">
 							<div class="d-lg-flex justify-content-lg-end align-items-lg-center">
 								<span class="social-icons top">
@@ -80,9 +80,9 @@
 							<div class="text-center">
 								<div class="header_logo_center">
 									<a href="index.html" class="logo">
-										<span class="logo_text">WAYMAKER</span>
-										<img src="images/logo.png" alt="">
-										<span class="logo_subtext">RECRUITMENT</span>
+										<!-- <img src="images/logo.png" alt=""> -->
+										<span class="logo_text">WAYMAKER INTERNATIONAL</span>
+										<span class="logo_subtext">RECRUITMENT PVT LTD.</span>
 									</a>
 								</div>
 								<!-- eof .header_left_logo -->
@@ -710,7 +710,7 @@
 				</div>
 			</section>
 
-			<section class="ls about s-pt-25">
+			<section class="ls about s-pt-20">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12 col-lg-6 animate" data-animation="slideInLeft">
@@ -722,8 +722,9 @@
 									Welcome to
 								</h4>
 								<h3>
-									WAYMAKER RECRUITMENT
-								</h3>
+									WAYMAKER 
+								</h3><br><br>
+								<h3>RECRUITMENT</h3>
 								<p>
 									We believe in the value that our functions add to a business. We feel that this
 									specialist part of HR is often unrecognised for its contribution to the
@@ -759,7 +760,7 @@
 								</ul>
 							</div>
 						</div>
-						<div class="col-md-12 col-lg-6 animate" data-animation="slideInRight">
+						<div class="col-md-6. col-lg-6 animate" data-animation="slideInRight">
 							<img src="images/person01.jpg" alt="person01.jpg">
 						</div>
 					</div>
@@ -1459,9 +1460,9 @@
 							<div class="text-center">
 								<div class="header_logo_center footer-logo-ds">
 									<a href="index.html" class="logo">
-										<span class="logo_text">Invenir</span>
-										<img src="images/logo.png" alt="">
-										<span class="logo_subtext">Consult</span>
+										<span class="logo_text">WAYMAKER INTERNATIONAL</span>
+										<!-- <img src="images/logo.png" alt=""> -->
+										<span class="logo_subtext">RECRUITMENT PVT LTD.</span>
 									</a>
 								</div>
 								<!-- eof .header_left_logo -->
@@ -1473,12 +1474,12 @@
 							<div class="widget">
 								<div class="media">
 									<i class="mx-10 color-main fa fa-map-marker"></i>
-									4518 Spirit Drive, Deland, FL 32720
+									9 Sunway, Micleham VIC 3064
 								</div>
 
 								<div class="media">
 									<i class="mx-10 color-main fa fa-phone"></i>
-									101 123 456 789
+									KS Vinod +61 434587771
 								</div>
 
 								<div class="media text-center link">
