Index html changed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <!-- Mirrored from html.modernwebtemplates.com/invenir-consult/index_singlepage.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 14 Sep 2022 14:42:48 GMT -->
 <head>
-	<title>Invenir - HR Recruiting Agency HTML Template</title>
+	<title>Waymaker - HR Recruiting Agency HTML Template</title>
 	<meta charset="utf-8">
 	<!--[if IE]>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
