--- a/index.html
+++ b/index.html
@@ -125,18 +125,8 @@
 								<nav class="top-nav">
 									<ul class="nav sf-menu">
 										<li>
-											<a href="#box_wrapper">Home</a>
-											<ul>
-												<li>
-													<a href="index-2.html">MultiPage</a>
-												</li>
-												<li>
-													<a href="index_static.html">Static Page</a>
-												</li>
-												<li>
-													<a href="index_singlepage.html">Single Page</a>
-												</li>
-											</ul>
+											<a href="#">Home</a>
+											
 										</li>
 
 										<li>
