--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <!-- Mirrored from html.modernwebtemplates.com/invenir-consult/index_singlepage.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 14 Sep 2022 14:42:48 GMT -->
 <head>
-	<title>Waymaker - HR Recruiting Agency HTML Template</title>
+	<title>Waymaker- International Recruitment PVT LD</title>
 	<meta charset="utf-8">
 	<!--[if IE]>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -98,9 +98,9 @@
 							<div class="text-center">
 								<div class="header_logo_center">
 									<a href="index.html" class="logo">
-										<span class="logo_text">Invenir</span>
+										<span class="logo_text">Waymaker</span>
 										<img src="images/logo.png" alt="">
-										<span class="logo_subtext">consult</span>
+										<span class="logo_subtext">Recruitment</span>
 									</a>
 								</div>
 								<!-- eof .header_left_logo -->
@@ -331,16 +331,16 @@
 						<div class="col-md-12 col-lg-6 animate" data-animation="slideInLeft">
 							<div class="heading-about">
 								<h2>
-									HR
+									WM
 								</h2>
 								<h4>
-									Welcome to
+									Waymaker
 								</h4>
 								<h3>
-									Invenir!
+									
 								</h3>
 								<p>
-									We believe in the value that our functions add to a business. We feel that this specialist part of HR is often unrecognised for its contribution to the profitability and success of a business.
+									A recruitment agency
 								</p>
 							</div>
 							<div class="icons-list">
@@ -919,17 +919,17 @@
 									Call Us 24/7
 								</p>
 								<h3>
-									+123-456-7890
+									+61434587771
 								</h3>
 							</div>
 						</div>
 						<div class="col-md-4 text-center animate" data-animation="pullUp">
 							<div class="info-block">
 								<p>
-									Email Address
+								EMAIL
 								</p>
 								<h3>
-									<a href="https://html.modernwebtemplates.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="22475a434f524e4762475a434f524e470c414d4f">[email&#160;protected]</a>
+									<a href="mailto:contact@goldenwind.group" class="__cf_email__" data-cfemail="22475a434f524e4762475a434f524e470c414d4f">contact@goldenwind.group</a>
 								</h3>
 							</div>
 						</div>
@@ -949,7 +949,7 @@
 
 			<div class="ls ms page_map" data-draggable="true" data-scrollwheel="true">
 				<div class="marker">
-					<div class="marker-address">sydney, australia, Liverpool street, 66</div>
+					<div class="marker-address">9 Sunway , Micleham, VIC 3064</div>
 					<div class="marker-title">First Marker</div>
 					<div class="marker-description">
 						<ul class="list-unstyled">
@@ -959,7 +959,7 @@
 										<i class="fa fa-map-marker"></i>
 									</span>
 									<span>
-										Sydney, Australia, Liverpool street, 66
+										9 Sunway , Micleham, VIC 3064
 									</span>
 								</span>
 							</li>
@@ -1041,17 +1041,17 @@
 							<div class="widget">
 								<div class="media">
 									<i class="mx-10 color-main fa fa-map-marker"></i>
-									4518 Spirit Drive, Deland, FL 32720
+									9 Sunway , Micleham, VIC 3064
 								</div>
 
 								<div class="media">
 									<i class="mx-10 color-main fa fa-phone"></i>
-									101 123 456 789
+									+61434587771
 								</div>
 
 								<div class="media text-center link">
 									<i class="mx-10 text-center color-main fa fa-envelope"></i>
-									<a href="#"><span class="__cf_email__" data-cfemail="e5809d8488958980a5809d8488958980cb868a88">[email&#160;protected]</span></a>
+									<a href="mailto:contact@goldenwind.group"><span class="__cf_email__" data-cfemail="e5809d8488958980a5809d8488958980cb868a88">contact@goldenwind.group</span></a>
 								</div>
 							</div>
 
@@ -1092,8 +1092,8 @@
 					<div class="row align-items-center">
 						<div class="divider-20 d-none d-lg-block"></div>
 						<div class="col-md-12 text-center">
-							<p>&copy; Copyright
-								<span class="copyright_year">2018</span> All Rights Reserved</p>
+							<p>&copy; Copyright 	
+								<span class="copyright_year">© 2022</span> Branded by hoB</p>
 						</div>
 						<div class="divider-20 d-none d-lg-block"></div>
 					</div>
@@ -1117,5 +1117,4 @@
 </body>
 
 
-<!-- Mirrored from html.modernwebtemplates.com/invenir-consult/index_singlepage.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 14 Sep 2022 14:42:48 GMT -->
 </html>
