--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 						<div class="col-md-12 col-lg-6 animate" data-animation="slideInLeft">
 							<div class="heading-about">
 								<h2>
-									Our Servicesa
+									Our Services
 								</h2><br>
 								<h4> 
 									
