Updated the slider

--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
 												</div>
 												<div class="intro_layer" data-animation="pullDown">
 													<h2 class="text-uppercase intro_featured_word">
-														Help us match to
-														<br> Your hr role
+														Help us find you
+														<br>better career
 													</h2>
 												</div>
 												<div class="intro_layer" data-animation="fadeIn">
@@ -249,20 +249,20 @@
 											<div class="intro_layers">
 												<div class="intro_layer" data-animation="pullDown">
 													<h3 class="intro_before_featured_word">
-														Launch Your recruitment career
+														We are here to guide
 													</h3>
 												</div>
 												<div class="intro_layer" data-animation="pullUp">
 													<h2 class="text-uppercase intro_featured_word">
-														With innovate
-														<br> Сonsultancy
+														You to the job
+														<br> you Wish 
 													</h2>
 												</div>
-												<div class="intro_layer" data-animation="fadeIn">
+												<!-- <div class="intro_layer" data-animation="fadeIn">
 													<div class="d-inline-block">
 														<button type="button" class="btn btn-outline-maincolor center-block">Join Our HR</button>
 													</div>
-												</div>
+												</div> -->
 											</div>
 											<!-- eof .intro_layers -->
 										</div>
