--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/animations.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
-	<link rel="stylesheet" href="css/main.css?v=2.71" class="color-switcher-link">
+	<link rel="stylesheet" href="css/main.css?v=2.91" class="color-switcher-link">
 	<script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
 	<!--[if lt IE 9]>
@@ -214,13 +214,13 @@
 											<div class="intro_layers">
 												<div class="intro_layer" data-animation="pullUp">
 													<h3 class="intro_before_featured_word">
-														Stuck in a ‘career rut’?
+														Register here and fast track your career.
 													</h3>
 												</div>
 												<div class="intro_layer" data-animation="pullDown">
 													<h2 class="text-uppercase intro_featured_word">
-														Help us match to
-														<br> Your hr role
+														Be our next success story.
+
 													</h2>
 												</div>
 												<div class="intro_layer" data-animation="fadeIn">
@@ -248,13 +248,12 @@
 											<div class="intro_layers">
 												<div class="intro_layer" data-animation="pullDown">
 													<h3 class="intro_before_featured_word">
-														Launch Your recruitment career
+														Find a great job anywhere in the world.
 													</h3>
 												</div>
 												<div class="intro_layer" data-animation="pullUp">
 													<h2 class="text-uppercase intro_featured_word">
-														With innovate
-														<br> Сonsultancy
+														With Waymaker
 													</h2>
 												</div>
 												<div class="intro_layer" data-animation="fadeIn">
@@ -335,30 +334,29 @@
 			<section class="icon-boxed teaser-box ls s-py-lg-130 c-my-lg-10 s-parallax">
 	
 				<div class="container">
-					<div class="row">
+					<div class="row justify-content-center">
 						<div class="col-lg-4 mt-5">
-							<div class="icon-box text-center hero-bg box-shadow">
+							<div class="icon-box h-100 text-center hero-bg box-shadow">
 								<div class="teaser-icon icon-styled bg-maincolor3">
 									<i class="fa fa-unlock-alt"></i>
 								</div>
 								<h3>
-									<a href="#">Service 1</a>
+									<a href="#">Customer Service</a>
 								</h3>
-								<p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis adipisci ducimus nulla itaque doloribus. Itaque quasi alias autem tempore nihil, blanditiis optio, a ea facere cumque, magni corporis perspiciatis sed.								</p>
-							</div>
+								<p class="text-center">
+									You should choose us over other customer service recruitment agencies because we will actively look for a person who perfectly fits your role until you are happy with your new hire. </p>			</div>
 						</div>
 						<div class="col-lg-4 mt-5">
-							<div class="icon-box text-center hero-bg box-shadow">
+							<div class="icon-box h-100 text-center hero-bg box-shadow">
 								<div class="teaser-icon icon-styled bg-maincolor3">
 									<i class="fa fa-cloud"></i>
 								</div>
 								<h3>
-									<a href="#">Service 2</a>
+									<a href="#">Recruitment </a>
 								</h3>
 								<p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi asperiores optio consequuntur culpa, necessitatibus dolores quaerat nostrum aperiam distinctio quos explicabo nihil voluptatibus, 
-								</p>
+									You can have faith in the fact that we accurately match the right people to the right jobs thanks to our ten years of experience.
+									You can be confident that you are getting the best recruitment service and top-notch candidates thanks to our guaranteed service levels and ongoing performance assessments. 								</p>
 							</div>
 						</div>
 						<div class="col-lg-4 mt-5">
@@ -367,10 +365,25 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi asperiores optio 
 									<i class="fa fa-database"></i>
 								</div>
 								<h3>
-									<a href="#">Service 3</a>
+									<a href="#">Talent Management</a>
 								</h3>
 								<p>
-Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, numquam asperiores. Vero porro sed odit quia, dolore animi quos, repudiandae in aperiam cumque corrupti ea explicabo quod. Ullam, suscipit iure!
+									This involves identifying talent gaps and open positions, locating and onboarding qualified candidates, growing them within the system and developing necessary skills, training for expertise with a future-focused approach, and successfully engaging, retaining, and motivating them to achieve long-term business goals. 
+
+								</p>
+							</div>
+						</div>
+						<div class="col-lg-4 mt-5">
+							<div class="icon-box h-100 text-center hero-bg box-shadow">
+								<div class="teaser-icon icon-styled bg-maincolor3">
+									<i class="fa fa-database"></i>
+								</div>
+								<h3>
+									<a href="#">Talent Management</a>
+								</h3>
+								<p>
+									This involves identifying talent gaps and open positions, locating and onboarding qualified candidates, growing them within the system and developing necessary skills, training for expertise with a future-focused approach, and successfully engaging, retaining, and motivating them to achieve long-term business goals. 
+
 								</p>
 							</div>
 						</div>
@@ -397,38 +410,42 @@ Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, numquam as
 							<div class="card-header" role="tab" id="collapse01_header">
 								<h5>
 									<a data-toggle="collapse" href="#collapse01" aria-expanded="true" aria-controls="collapse01">
-										Point No. 1
+										Access to the best candidates
+
 									</a>
 								</h5>
 							</div>
 							<div id="collapse01" class="collapse show" role="tabpanel" aria-labelledby="collapse01_header" data-parent="#accordion01">
 								<div class="card-body">
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta repellendus ducimus obcaecati totam tempora eveniet suscipit ipsa. Temporibus maiores nisi quae tempore id. Facere sed expedita possimus nulla deleniti quod?
+									Availability of the top candidates.
+									Using both conventional and modern recruitment channels, and applying our in-depth knowledge of the sector. 
 								</div>
 							</div>
 							<div class="card-header" role="tab" id="collapse02_header">
 								<h5>
 									<a class="collapsed" data-toggle="collapse" href="#collapse02" aria-expanded="false" aria-controls="collapse02">
-										Point no.  2
+										Save time & money
 									</a>
 								</h5>
 							</div>
 							<div id="collapse02" class="collapse" role="tabpanel" aria-labelledby="collapse02_header" data-parent="#accordion01">
 								<div class="card-body">
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus voluptatum, praesentium expedita esse quos officiis sunt nisi facilis, deserunt quam fuga nostrum mollitia blanditiis! Nostrum quis id iste sit delectus?
+									Build a relationship with candidates. Once a recruiter understands your business and goals, we will hire the right people in a timely, cost-effective manner.
+
 								</div>
 							</div>
 							<div class="card-header" role="tab" id="collapse03_header">
 								<h5>
 									<a class="collapsed" data-toggle="collapse" href="#collapse03" aria-expanded="false" aria-controls="collapse03">
-										Point No. 3
+										Industry expertise
+
 									</a>
 								</h5>
 							</div>
 							<div id="collapse03" class="collapse" role="tabpanel" aria-labelledby="collapse03_header" data-parent="#accordion01">
 								<div class="card-body">
 
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit architecto hic, veritatis alias aspernatur iusto quas commodi voluptatibus esse sapiente obcaecati velit quia quibusdam nihil animi facilis autem possimus laborum.
+									Waymaker will offer specialist recruiters for specific industries. Waymaker Recruitment is a leading recruitment and executive search firm serving all industries.
 								</div>
 							</div>
 
@@ -436,13 +453,15 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit architecto hic
 							<div class="card-header" role="tab" id="collapse04_header">
 								<h5>
 									<a class="collapsed" data-toggle="collapse" href="#collapse04" aria-expanded="false" aria-controls="collapse04">
-								Point No.4
+										Enable business growth
+
 									</a>
 								</h5>
 							</div>
 							<div id="collapse04" class="collapse" role="tabpanel" aria-labelledby="collapse04_header" data-parent="#accordion01">
 								<div class="card-body">
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam pariatur velit eligendi magnam fugit quas, natus doloribus sint cupiditate quae totam ut cum in quidem! Aspernatur ad nobis est vero.
+									By partnering with Waymaker, you can find the best talent and get support to help your business reach its full potential.
+									Waymaker offers more than just labour; we also give businesses talent and assistance as they expand. 
 								</div>
 							</div>
 						</div>
