--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/animations.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
-	<link rel="stylesheet" href="css/main.css?v=2.91" class="color-switcher-link">
+	<link rel="stylesheet" href="css/main.css?v=2.1" class="color-switcher-link">
 	<script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
 	<!--[if lt IE 9]>
@@ -219,13 +219,8 @@
 												</div>
 												<div class="intro_layer" data-animation="pullDown">
 													<h2 class="text-uppercase intro_featured_word">
-<<<<<<< HEAD
 														Be our next success story.
 
-=======
-														Help us find you
-														<br>better career
->>>>>>> a9aa4cbeeddec66738dad1223a23bcb05275fb63
 													</h2>
 												</div>
 												<div class="intro_layer" data-animation="fadeIn">
@@ -253,28 +248,19 @@
 											<div class="intro_layers">
 												<div class="intro_layer" data-animation="pullDown">
 													<h3 class="intro_before_featured_word">
-<<<<<<< HEAD
 														Find a great job anywhere in the world.
-=======
-														We are here to guide
->>>>>>> a9aa4cbeeddec66738dad1223a23bcb05275fb63
 													</h3>
 												</div>
 												<div class="intro_layer" data-animation="pullUp">
 													<h2 class="text-uppercase intro_featured_word">
-<<<<<<< HEAD
 														With Waymaker
-=======
-														You to the job
-														<br> you Wish 
->>>>>>> a9aa4cbeeddec66738dad1223a23bcb05275fb63
 													</h2>
 												</div>
-												<!-- <div class="intro_layer" data-animation="fadeIn">
+												<div class="intro_layer" data-animation="fadeIn">
 													<div class="d-inline-block">
 														<button type="button" class="btn btn-outline-maincolor center-block">Join Our HR</button>
 													</div>
-												</div> -->
+												</div>
 											</div>
 											<!-- eof .intro_layers -->
 										</div>
