--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<link rel="stylesheet" href="css/font-awesome.css">
 	<link rel="stylesheet" href="css/main.css?v=2.1" class="color-switcher-link">
 	<script src="js/vendor/modernizr-2.6.2.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 	<!--[if lt IE 9]>
 		<script src="js/vendor/html5shiv.min.js"></script>
@@ -338,7 +339,7 @@
 						<div class="col-lg-4 mt-5">
 							<div class="icon-box h-100 text-center hero-bg box-shadow">
 								<div class="teaser-icon icon-styled bg-maincolor3">
-									<i class="fa fa-unlock-alt"></i>
+									<i class="fa-solid fa-people-line"></i>
 								</div>
 								<h3>
 									<a href="#">Customer Service</a>
@@ -349,7 +350,7 @@
 						<div class="col-lg-4 mt-5">
 							<div class="icon-box h-100 text-center hero-bg box-shadow">
 								<div class="teaser-icon icon-styled bg-maincolor3">
-									<i class="fa fa-cloud"></i>
+									<i class="fa-solid fa-briefcase"></i>
 								</div>
 								<h3>
 									<a href="#">Recruitment </a>
@@ -362,7 +363,7 @@
 						<div class="col-lg-4 mt-5">
 							<div class="icon-box text-center hero-bg box-shadow">
 								<div class="teaser-icon icon-styled bg-maincolor3">
-									<i class="fa fa-database"></i>
+									<i class="fa-solid fa-medal"></i>
 								</div>
 								<h3>
 									<a href="#">Talent Management</a>
@@ -376,14 +377,14 @@
 						<div class="col-lg-4 mt-5">
 							<div class="icon-box h-100 text-center hero-bg box-shadow">
 								<div class="teaser-icon icon-styled bg-maincolor3">
-									<i class="fa fa-database"></i>
+									<i class="fa-solid fa-people-group"></i>
 								</div>
 								<h3>
-									<a href="#">Talent Management</a>
+									<a href="#">HR Solutions</a>
 								</h3>
 								<p>
-									This involves identifying talent gaps and open positions, locating and onboarding qualified candidates, growing them within the system and developing necessary skills, training for expertise with a future-focused approach, and successfully engaging, retaining, and motivating them to achieve long-term business goals. 
-
+									A Cost Effective Managed HR Service from HR Solutions enables you to concentrate on your business rather than your corporate HR Function in this era of complex human resource operations.
+Your human resources department will have lower operating costs thanks to our managed HR solutions, which also guarantee the most recent laws and industry best practises, protecting state and federal compliance. 
 								</p>
 							</div>
 						</div>
