--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
 										<li>
 											<a href="#blog">Blog</a>
 										</li>
-										<li>
+										<!-- <li>
 											<a href="#testimonials">Testimonials</a>
-										</li>
+										</li> -->
 										<li>
 											<a href="#contactus">Contact Us</a>
 										</li>
@@ -827,7 +827,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, dolores quaera
 			</section>
 
 		
-			<section id="testimonials" class="s-pt-75 s-pb-50">
+			<!-- <section id="testimonials" class="s-pt-75 s-pb-50">
 				<div class="container">
 					<div class="text-center">
 						<h3>Testimonials</h3>
@@ -894,7 +894,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias tempora sint expe
 						<div class="divider-50 d-none d-lg-block"></div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 			<section class="pt-20 pb-10 s-py-lg-130 main_contact_form" id="contactus">
 				<div class="container">
 					<div class="row">
