--- a/index.html
+++ b/index.html
@@ -342,34 +342,38 @@
 									<i class="fa-solid fa-people-line"></i>
 								</div>
 								<h3>
-									<a href="#">Customer Service</a>
+									<a href="#">Skilled Migration</a>
 								</h3>
-								<p class="text-center">
-									You should choose us over other customer service recruitment agencies because we will actively look for a person who perfectly fits your role until you are happy with your new hire. </p>			</div>
+								<p class="text-justify">
+									The Skilled Migration Visa is allotted to individuals with skills required to cover shortages in specific parts of Australia. These skill requirements change from time to time based on what the Australian economy needs. <br>
+									With a Skilled Migration Visa, you can live and work in Australia, depending on your application. </p>			</div>
 						</div>
 						<div class="col-lg-4 mt-5">
 							<div class="icon-box h-100 text-center hero-bg box-shadow">
 								<div class="teaser-icon icon-styled bg-maincolor3">
-									<i class="fa-solid fa-briefcase"></i>
+									<i class="fa-solid fa-people-roof"></i>
 								</div>
 								<h3>
-									<a href="#">Recruitment </a>
+									<a href="#">Family Migration </a>
 								</h3>
-								<p>
-									You can have faith in the fact that we accurately match the right people to the right jobs thanks to our ten years of experience.
-									You can be confident that you are getting the best recruitment service and top-notch candidates thanks to our guaranteed service levels and ongoing performance assessments. 								</p>
+								<p class="text-justify">
+									If you have a family member who is an Australian Citizen, Australia Permanent Resident or a New Zealand Resident, they may be able to sponsor you, if you want to migrate or become a permanent resident in Australia.
+
+                                    We know it’s hard for families to be apart and we help you with every step of the process from identifying the right visa type to submitting all the necessary paperwork, so you get your visa and can be with your family within the earliest possible time.								</p>
 							</div>
 						</div>
 						<div class="col-lg-4 mt-5">
 							<div class="icon-box text-center hero-bg box-shadow">
 								<div class="teaser-icon icon-styled bg-maincolor3">
-									<i class="fa-solid fa-medal"></i>
+									<i class="fa-solid fa-square-poll-vertical"></i>
 								</div>
 								<h3>
-									<a href="#">Talent Management</a>
+									<a href="#">Business/Investor Migration</a>
 								</h3>
-								<p>
-									This involves identifying talent gaps and open positions, locating and onboarding qualified candidates, growing them within the system and developing necessary skills, training for expertise with a future-focused approach, and successfully engaging, retaining, and motivating them to achieve long-term business goals. 
+								<p class="text-justify">
+									If you are a businessman, high net worth individual or part of a venture capital firm and are keen to invest in Australia, the Australian Immigration Business Skills Visa might be the right option for you. Australia has a thriving economy and is a highly attractive investment destination.
+
+                                    If you consider starting a business venture or investing in Australia, you would be eligible to apply for the Business Migration Visa. Once your business is set up, you can then apply for a Australian Permanent Residency Visa. 
 
 								</p>
 							</div>
@@ -377,14 +381,26 @@
 						<div class="col-lg-4 mt-5">
 							<div class="icon-box h-100 text-center hero-bg box-shadow">
 								<div class="teaser-icon icon-styled bg-maincolor3">
-									<i class="fa-solid fa-people-group"></i>
+									<i class="fa-solid fa-graduation-cap"></i>
 								</div>
 								<h3>
-									<a href="#">HR Solutions</a>
+									<a href="#">Student Visa, Temporary Graduate Visa, Recognised Graduate Visa</a>
 								</h3>
-								<p>
-									A Cost Effective Managed HR Service from HR Solutions enables you to concentrate on your business rather than your corporate HR Function in this era of complex human resource operations.
-Your human resources department will have lower operating costs thanks to our managed HR solutions, which also guarantee the most recent laws and industry best practises, protecting state and federal compliance. 
+								<p class="text-justify">
+									If you’re looking towards Australia for your education, then there are several student visa options you could consider. Our services cover the entire visa application process. If you hold a Student Visa and want your spouse to be able to join you in Australia, we can help with that too. After you complete your education, you may also be eligible for a work visa. 
+								</p>
+							</div>
+						</div>
+						<div class="col-lg-4 mt-5">
+							<div class="icon-box h-100 text-center hero-bg box-shadow">
+								<div class="teaser-icon icon-styled bg-maincolor3">
+									<i class="fa-solid fa-briefcase"></i>
+								</div>
+								<h3>
+									<a href="#">Work Visa</a>
+								</h3>
+								<p class="text-justify">
+									There are a number of ways you could come to Australia and work on a visa. Some of these are employer sponsored visas, in other cases you could apply yourself. 
 								</p>
 							</div>
 						</div>
