--- a/services/index.html
+++ b/services/index.html
@@ -76,27 +76,27 @@
                                 
                             </li>
                             <li class="active">
-                                <a href="/index.html#services" class="active">Services</a>
+                                <a href="../index.html#services" class="active">Services</a>
                             </li>
 
                             <li>
-                                <a href="/index.html#whychooseus">About</a>
+                                <a href="../index.html#whychooseus">About</a>
                             </li>
                             <li>
-                                <a href="/index.html#ach">Achievements</a>
+                                <a href="../index.html#ach">Achievements</a>
                             </li>
                             <li>
-                                <a href="/index.html#blog">Blog</a>
+                                <a href="../index.html#blog">Blog</a>
                             </li>
                             <!-- <li>
                                 <a href="#testimonials">Testimonials</a>
                             </li> -->
                             <li>
-                                <a href="/index.html#contactus">Contact Us</a>
+                                <a href="../index.html#contactus">Contact Us</a>
                             </li>
                             
                             <li>
-                                <a href="/index.html#location">Location</a>
+                                <a href="../index.html#location">Location</a>
                             </li>
 
                         </ul>
@@ -555,19 +555,19 @@
                                 <a href="/">Home</a>
                             </li>
                             <li class="menu1">
-                                <a href="/index.html#services">Services</a>
+                                <a href="../index.html#services">Services</a>
                             </li>
                             <li>
-                                <a href="/index.html#whychooseus">About</a>
+                                <a href="../index.html#whychooseus">About</a>
                             </li>
                             <li class="menu1">
-                                <a href="/index.html#ach">Achievements</a>
+                                <a href="../index.html#ach">Achievements</a>
                             </li>
                             <li>
-                                <a href="/index.html#contactus">Contact Us</a>
+                                <a href="../index.html#contactus">Contact Us</a>
                             </li>
                             <li class="menu1">
-                                <a href="/index.html#location">Location</a>
+                                <a href="../index.html#location">Location</a>
                             </li>
                         </ul>
                     </div>
