--- a/services/index.html
+++ b/services/index.html
@@ -50,7 +50,7 @@
                 <div class="text-center">
                     <div class="header_logo_center">
                         <a href="index.html" class="logo">
-                            <img src="/images/logo.png" alt="">
+                            <img src="../images/logo.png" alt="">
                         </a>
                     </div>
                     <!-- eof .header_left_logo -->
@@ -577,7 +577,7 @@
                         <div class="header_logo_center footer-logo-ds">
                             <a href="index.html" class="logo">
                                 <!-- <span class="logo_text">Invenir</span> -->
-                                <img src="/images/logow.png" alt="">
+                                <img src="../images/logow.png" alt="">
                                 <!-- <span class="logo_subtext">Consult</span> -->
                             </a>
                         </div>
