--- a/services/index.html
+++ b/services/index.html
@@ -552,7 +552,7 @@
                         <h3 class="widget-title title-menu">Explore</h3>
                         <ul class="footer-menu">
                             <li>
-                                <a href="/">Home</a>
+                                <a href="../">Home</a>
                             </li>
                             <li class="menu1">
                                 <a href="../index.html#services">Services</a>
