--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 												</div>
 												<div class="intro_layer" data-animation="pullDown">
 													<h2 class="text-uppercase intro_featured_word">
-														Be our next success story.
+														Be our next success <br> story.
 
 													</h2>
 												</div>
