--- a/services/index.html
+++ b/services/index.html
@@ -644,6 +644,7 @@
 <script src="assets/js/jquery.form.js" type="text/javascript"></script> 
 <script src="assets/js/wow.min.js" type="text/javascript"></script> 
 <script src="assets/js/custom.js" type="text/javascript"></script> 
+<script src="../js/main.js"></script>
 <script>
 	// wow animations
 	if( $(window).outerWidth() >= 767 ) {
