--- a/index.html
+++ b/index.html
@@ -923,14 +923,14 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias tempora sint expe
 								</div>
 
 							</div>
-							<!-- .testimonials-slider -->
+							 .testimonials-slider -->
 
 						</div>
 
 						<div class="divider-50 d-none d-lg-block"></div>
 					</div>
 				</div>
-			</section> -->
+			</section> 
 			<section class="pt-20 pb-10 s-py-lg-130 main_contact_form" id="contactus">
 				<div class="container">
 					<div class="row">
