--- a/index.html
+++ b/index.html
@@ -179,15 +179,14 @@
 									<div class="col-sm-12">
 										<div class="intro_layers_wrapper">
 											<div class="intro_layers">
-												<div class="intro_layer" data-animation="fadeInLeft">
+												<!-- <div class="intro_layer" data-animation="fadeInLeft">
 													<h3 class="intro_before_featured_word">
 														Keep in touch & stay updated
 													</h3>
-												</div>
+												</div> -->
 												<div class="intro_layer" data-animation="fadeInRight">
 													<h2 class="text-uppercase intro_featured_word">
-														With market
-														<br> Trends
+														Thinking of making <br>Australia home?
 													</h2>
 												</div>
 												<div class="intro_layer" data-animation="fadeIn">
