--- a/index.html
+++ b/index.html
@@ -597,25 +597,25 @@
 									<li class=" media media-body">
 										<i class="teaser-icon fa fa-rocket"></i>
 										<h4 class="title">
-											<span>638</span> Companies We Helped
+											<span>50+</span> Candidates Recruited
 										</h4>
 									</li>
 									<li class="media media-body">
 										<i class="teaser-icon fa fa-briefcase"></i>
 										<h4 class="title">
-											<span>12</span> Corporate Programs
+											<span>10+</span> Corporate Programs
 										</h4>
 									</li>
 									<li class="media media-body">
 										<i class="teaser-icon fa fa-graduation-cap"></i>
 										<h4 class="title">
-											<span>28</span> Trainings Courses
+											<span>20+</span> Trainings Courses
 										</h4>
 									</li>
 									<li class="border-bottom-0 media media-body">
 										<i class="teaser-icon fa fa-user"></i>
 										<h4 class="title">
-											<span>125</span> Strategic Partners
+											<span>100+</span> Strategic Partners
 										</h4>
 									</li>
 								</ul>
@@ -1148,7 +1148,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias tempora sint expe
 					</div>
 				</div>
 				<div class="col-md-12 text-center">
-					<p style="font-size: 12px;">DISCLAIMER CLAUSE : <br> WAY MAKER INTERNATIONAL RECRUITMENT PVT LTD WE INVITES CANDIDATES AS PER OPEN DECLARATION FROM THE FEDERAL GOVERNMENT OF AUSTRALIA & APPROVAL WILL BE THE SOLE DISCRETION OF THE SAME.
+					<p style="font-size: 12px;">DISCLAIMER CLAUSE : <br>Way Maker International Recruitment PVT LTD <br> We invite candidates as per open declaration from the federal government of Australia & approval will be the sole discretion of the same. 
 						</p>
 				</div>
 			</footer>
