--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 						<div class="col-lg-4 mt-5">
 							<div class="icon-box h-100 text-center hero-bg box-shadow">
 								<div class="teaser-icon icon-styled bg-maincolor3">
-									<img src="/images/skilled.jpg" alt="">
+									<img src="images/skilled.jpg" alt="">
 								</div>
 								<h3>
 									<a href="services/index.html#tab1">Skilled Migration <br>
@@ -357,7 +357,7 @@
 						<div class="col-lg-4 mt-5">
 							<div class="icon-box h-100 text-center hero-bg box-shadow">
 								<div class="teaser-icon icon-styled bg-maincolor3">
-									<img src="/images/family.jpg" alt="">
+									<img src="images/family.jpg" alt="">
 								</div>
 								<h3>
 									<a href="services/index.html#tab2">Family Migration <br>
@@ -374,7 +374,7 @@
 						<div class="col-lg-4 mt-5">
 							<div class="icon-box text-center hero-bg box-shadow">
 								<div class="teaser-icon icon-styled bg-maincolor3">
-									<img src="/images/business.jpg" alt="">
+									<img src="images/business.jpg" alt="">
 								</div>
 								<h3>
 									<a href="services/index.html#tab3">Business/Investor Migration <br>
@@ -392,7 +392,7 @@
 						<div class="col-lg-4 mt-5">
 							<div class="icon-box h-100 text-center hero-bg box-shadow">
 								<div class="teaser-icon icon-styled bg-maincolor3">
-									<img src="/images/student.jpg" alt="">
+									<img src="images/student.jpg" alt="">
 								</div>
 								<h3>
 									<a href="services/index.html#tab4">Student Visa, Temporary Graduate Visa, Recognised Graduate Visa</a>
@@ -409,7 +409,7 @@
 						<div class="col-lg-4 mt-5">
 							<div class="icon-box h-100 text-center hero-bg box-shadow">
 								<div class="teaser-icon icon-styled bg-maincolor3">
-									<img src="/images/job.jpg" alt="">
+									<img src="images/job.jpg" alt="">
 								</div>
 								<h3>
 									<a href="services/index.html#tab5">Work Visa <br>
