--- a/services/index.html
+++ b/services/index.html
@@ -24,7 +24,7 @@
 <link rel="stylesheet" href="assets/css/style.css">
 <link rel="stylesheet" href="assets/css/responsive.css?v=1.11">
 <link rel="stylesheet" href="assets/css/color-1.css">
-<link rel="stylesheet" href="assets/css/main.css" class="color-switcher-link">
+<link rel="stylesheet" href="assets/css/main.css?v=8.1" class="color-switcher-link">
 </head>
 <body>
 <div id="dtr-wrapper" class="clearfix"> 
