--- a/index.html
+++ b/index.html
@@ -82,8 +82,18 @@
 			<section class="page_toplogo ls s-py-15 text-center">
 				<div class="container-fluid">
 					<div class="row align-items-center">
-						<div class="col-lg-4">
-							<div class="d-lg-flex justify-content-lg-end align-items-lg-center">
+						<div class="col-lg-4 col-6 text-left">
+							<div class=" text-lg-left">
+								<div class="header_logo_center">
+									<a href="index.html" class="logo">
+										<img src="images/logo.png" alt="">
+									</a>
+								</div>
+								<!-- eof .header_left_logo -->
+							</div>
+						</div>
+						<div class="col-lg-4 col-6">
+							<div class="d-lg-flex justify-content-center align-items-lg-center">
 								<span class="social-icons top">
 
 									<a href="#" class="fa fa-facebook " title="facebook"></a>
@@ -94,17 +104,8 @@
 								</span>
 							</div>
 						</div>
-						<div class="col-lg-4 text-center">
-							<div class="text-center">
-								<div class="header_logo_center">
-									<a href="index.html" class="logo">
-										<img src="images/logo.png" alt="">
-									</a>
-								</div>
-								<!-- eof .header_left_logo -->
-							</div>
-						</div>
-						<div class="col-lg-4">
+						
+						<div class="col-lg-4 col-6 d-flex justify-content-lg-end">
 							<button class="btn-outline-darkgrey  d-none d-lg-block">Looking for Staff?</button>
 						</div>
 					</div>
