--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/animations.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
-	<link rel="stylesheet" href="css/main.css?v=11.1" class="color-switcher-link">
+	<link rel="stylesheet" href="css/main.css?v=221.1" class="color-switcher-link">
 	<script src="js/vendor/modernizr-2.6.2.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -79,7 +79,7 @@
 
 			<!--eof topline-->
 
-			<section class="page_toplogo ls s-py-15 text-center">
+			<section class="page_toplogo ls s-py-15 text-right text-lg-center text-sm-right text-md-right">
 				<div class="container-fluid">
 					<div class="row align-items-center">
 						<div class="col-lg-4 col-6 text-left">
@@ -93,7 +93,7 @@
 							</div>
 						</div>
 						<div class="col-lg-4 col-6">
-							<div class="d-lg-flex justify-content-center align-items-lg-center">
+							<div class="d-lg-flex justify-content-lg-center align-items-lg-center">
 								<span class="social-icons top">
 
 									<a href="#" class="fa fa-facebook " title="facebook"></a>
@@ -287,7 +287,7 @@
 			</section>
 
 
-			<section id="services" class="ds slider-bottomline d-none d-xl-block py-50">
+			<section id="" class="ds slider-bottomline d-none d-xl-block py-50">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-4 text-center">
@@ -340,7 +340,7 @@
 						<div class="col-lg-4 hanim mt-5" >
 							
 							
-							<div class="icon-box ovrlyy h-100 text-center hero-bg ">
+							<div id="services" class="icon-box ovrlyy h-100 text-center hero-bg ">
 								<!-- <div class="teaser-icon icon-styled bg-maincolor3">
 									<img src="images/skilled.jpg" alt="">
 								</div> -->
