--- a/services/index.html
+++ b/services/index.html
@@ -12,9 +12,12 @@
 
 <!-- GOOGLE WEB FONT -->
 <link href="https://fonts.googleapis.com/css?family=Oxygen:300,400,700&display=swap" rel="stylesheet">
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
 <!-- CSS FILES -->
 <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="assets/fonts/iconfont.css">
 <link rel="stylesheet" href="assets/css/swiper.min.css">
@@ -22,16 +25,16 @@
 <link rel="stylesheet" href="assets/css/animate.css">
 <link rel="stylesheet" href="assets/css/select2.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
-<link rel="stylesheet" href="assets/css/responsive.css?v=1.11">
+<link rel="stylesheet" href="assets/css/responsive.css?v=221.11">
 <link rel="stylesheet" href="assets/css/color-1.css">
-<link rel="stylesheet" href="assets/css/main.css?v=8.1" class="color-switcher-link">
+<link rel="stylesheet" href="assets/css/main.css?v=221.1" class="color-switcher-link">
 </head>
 <body>
 <div id="dtr-wrapper" class="clearfix"> 
     
     <!-- Header
 ============================================= -->
-<section class="page_toplogo ls s-py-15 text-center">
+<section class="page_toplogo ls s-py-15 text-right text-lg-center text-sm-right text-md-right">
     <div class="container-fluid">
         <div class="row align-items-center">
             <div class="col-lg-4 col-6 text-left">
@@ -45,7 +48,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-6">
-                <div class="d-lg-flex justify-content-center align-items-lg-center">
+                <div class="d-lg-flex justify-content-lg-center align-items-lg-center">
                     <span class="social-icons top">
 
                         <a href="#" class="fa fa-facebook " title="facebook"></a>
