--- a/services/index.html
+++ b/services/index.html
@@ -76,7 +76,7 @@
                     <nav class="top-nav" style="">
                         <ul class="nav sf-menu sf-js-enabled sf-arrows" style="touch-action: pan-y;">
                             <li>
-                                <a href="/">Home</a>
+                                <a href="../">Home</a>
                                 
                             </li>
                             <li class="active">
