--- a/services/index.html
+++ b/services/index.html
@@ -35,7 +35,7 @@
     <!-- Header
 ============================================= -->
 <section class="page_toplogo ls s-py-15 text-right text-lg-center text-sm-right text-md-right">
-    <div class="container-fluid pr-5 pl-5">
+    <div class="container-fluid pr-lg-5 pl-lg-5">
         <div class="row align-items-center">
             <div class="col-lg-4 col-6 text-left">
                 <div class=" text-lg-left">
