--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 														Thinking of making <br>Australia home?
 													</h2>
 												</div>
-												<div class="intro_layer" data-animation="fadeIn">
+												<div class="intro_layer pt-5" data-animation="fadeIn">
 													<div class="d-inline-block">
 														<button type="button" class="btn btn-outline-maincolor center-block" data-animation="fadeIn">Contact Us</button>
 													</div>
@@ -224,7 +224,7 @@
 
 													</h2>
 												</div>
-												<div class="intro_layer" data-animation="fadeIn">
+												<div class="intro_layer pt-5" data-animation="fadeIn">
 													<div class="d-inline-block">
 														<button type="button" class="btn btn-outline-maincolor center-block" data-animation="fadeIn">Contact Us</button>
 													</div>
